# Inkwell

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  Header.tsx  Sidebar.tsx
src/extensions/: FontSize.ts
src/hooks/: useOllama.ts
src/store/: appStore.ts
src/types/: tiptap-pagination-breaks.d.ts
src/utils/: documentTools.ts  fileParser.ts  textChunker.ts
